<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item android:id="@+id/menu_item_games"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/games" />

        <item android:id="@+id/menu_item_genre"
            android:icon="@drawable/ic_games_white_24dp"
            android:title="@string/genres"/>

        <item android:id="@+id/menu_item_favorites"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/favorites" />

    </group>

    <group android:id="@+id/nav_others">
        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/about"/>
    </group>

</menu>